# kakao-telegram-stickers

./: .code-only-release  LICENSE  README.md  download_stickers.sh  pyproject.toml
.github/workflows/: test.yml
docs/: public-release.md
scripts/: audit_public_tree.py  export_public_tree.py
skills/kakao-telegram-stickers/: SKILL.md
skills/kakao-telegram-stickers/assets/: request-template.json
skills/kakao-telegram-stickers/references/: configuration.md  mini-emoji-detection-and-conversion.md  troubleshooting.md
skills/kakao-telegram-stickers/scripts/: get_owner_id.py  request_runner.py  run.py
skills/kakao-telegram-stickers/scripts/tele_sticker_maker/: __init__.py  cli.py  config.py  kakao.py  media.py  models.py  state.py  telegram.py  webp.py  workflow.py
tests/: test_cli.py  test_get_owner_id.py  test_kakao.py  test_media.py  test_mini_layout.py  test_models.py  test_public_release.py  test_request_runner.py  test_skill_package.py  test_state.py  test_telegram.py  test_webp.py  test_workflow.py  test_workflow_intent.py
